--- a/main_page.html
+++ b/main_page.html
@@ -4,23 +4,41 @@
 	<title>Ajva Community</title>
 	<link rel="stylesheet" type="text/css" href="style_main.css">
 </head>
-<body>
-	<!-- Navigation bar -->
-	<ul class='navbar'>
-		<li>Iok Jump</li>
-		<li>Comming soon</li>
-		<li>Comming soon</li>
-	</ul>
-	<!-- Logo and etc -->
-	<div>
-		<h2 class='lbl_ajva'>Ajva Community</h2>
-	</div>
-	<div class="button">
-	  <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
-	    <rect class="shape" height="60" width="320" />
-	    <div class="text">About us</div>
-	  </svg>
-	</div>
 
-</body>
+	<body>
+		<!-- Bubbles -->
+			<div class='bubble1'></div>
+			<div class='bubble2'></div>
+			<div class='bubble3'></div>
+			<div class='bubble4'></div>
+		<!-- Navigation bar -->
+		<ul class='navbar'>
+			<li>
+				<div class='top_button'>Iok Jump</div>
+			</li> 
+
+			<li>
+				<div class='top_button'>Comming soon</div>
+			</li>
+			<li>
+				<div class='top_button'>Comming soon</div>
+			</li>
+		</ul>
+
+		<!-- Logo and etc -->
+		<div>
+			<h2 class='lbl_ajva'>Ajva Community</h2>
+		</div>
+
+		<div class="button">
+
+		  <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
+		    <rect class="shape" height="60" width="320" />
+		    <div class="text">About us</div>
+		  </svg>
+
+		</div>
+
+	</body>
+
 </html>
