--- a/main_page.html
+++ b/main_page.html
@@ -31,14 +31,17 @@
 		</div>
 
 		<div class="button">
-
-		  <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
-		    <rect class="shape" height="60" width="320" />
-		    <div class="text">About us</div>
-		  </svg>
-
+			<a href="#tab_about">
+			  <svg height="60" width="320" xmlns="http://www.w3.org/2000/svg">
+			    <rect class="shape" height="60" width="320" />
+			    <div class="text">About us</div>
+			  </svg>
+		  </a>
 		</div>
-
+		
+		<div id='tab_about'>
+			<p class='text_a'>Test</p>
+			<img src="Portrait.jpg">
+		</div>
 	</body>
-
 </html>
