Add tab - "About us"

--- a/main_page.html
+++ b/main_page.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Ajva Community</title>
 	<link rel="stylesheet" type="text/css" href="style_main.css">
+	<link rel="stylesheet" type="text/css" href="styl2.css">
 </head>
 
 	<body>
@@ -18,10 +19,10 @@
 			</li> 
 
 			<li>
-				<div class='top_button'>Comming soon</div>
+				<div class='comming_soon'>Comming soon</div>
 			</li>
 			<li>
-				<div class='top_button'>Comming soon</div>
+				<div class='comming_soon'>Comming soon</div>
 			</li>
 		</ul>
 
@@ -38,10 +39,15 @@
 			  </svg>
 		  </a>
 		</div>
-		
-		<div id='tab_about'>
-			<p class='text_a'>Test</p>
-			<img src="Portrait.jpg">
+		<div class='main_tab_about'>
+			<div id='tab_about'>
+				<div class='bub_a'><h1 class='text_a'>About us</h1></div>
+				<div class='bub_a2'><h1 class='text_a2'>Its young community, with few developers.</h1></div>
+				<div class='bub_a3'><h1 class='text_a3'>We create a games for Android, and softs for Windows.</h1></div>
+				<div class='bub_a4'><h1 class='text_a4'>We can more.</h1></div>
+				<img class='img_a' src="Portrait.jpg">
+			</div>
 		</div>
+
 	</body>
 </html>
