--- a/main_page.html
+++ b/main_page.html
@@ -45,7 +45,7 @@
 				<div class='bub_a2'><h1 class='text_a2'>Its young community, with few developers.</h1></div>
 				<div class='bub_a3'><h1 class='text_a3'>We create a games for Android, and softs for Windows.</h1></div>
 				<div class='bub_a4'><h1 class='text_a4'>We can more.</h1></div>
-				<img class='img_a' src="Portrait.jpg">
+				<img class='img_a' src="127 Gentle Care.png">
 			</div>
 		</div>
 
