--- a/main_page.html
+++ b/main_page.html
@@ -4,6 +4,7 @@
 	<title>Ajva Community</title>
 	<link rel="stylesheet" type="text/css" href="style_main.css">
 	<link rel="stylesheet" type="text/css" href="styl2.css">
+	<link rel="icon" href="media/icon_tab_vers/tab_icon_transparent.png">
 </head>
 
 	<body>
@@ -45,7 +46,7 @@
 				<div class='bub_a2'><h1 class='text_a2'>Its young community, with few developers.</h1></div>
 				<div class='bub_a3'><h1 class='text_a3'>We create a games for Android, and softs for Windows.</h1></div>
 				<div class='bub_a4'><h1 class='text_a4'>We can more.</h1></div>
-				<img class='img_a' src="127 Gentle Care.png">
+				<img class='img_a' src="media/127 Gentle Care.png">
 			</div>
 		</div>
 
